--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,10 @@
      <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap"
      rel="stylesheet">
-<!-- MATERIAL DESIGN ICONIC FONT -->
-		<link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
 		
 		
     
     <!-- Css Styles -->
-		<link rel="stylesheet" href="css/register.css">
      <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
      <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
      <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
@@ -37,6 +34,7 @@
      <link rel="stylesheet" href="css/style.css" type="text/css">
      <link rel="stylesheet" type="text/css" href="css/util.css">
 	   <link rel="stylesheet" type="text/css" href="css/main.css">
+     <link rel="stylesheet" href="css/signup.css">
     
     <title>React App</title>
   </head>
