--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 	  <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="css/signup.css">
     
-    <title>React App</title>
+    <title>Ashion</title>
   </head>
   <body>
 
